npm/testpolicies/testing/allow-all-from-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-from-all
  namespace: testnamespace
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress: 
    - {}
