npm/testpolicies/testing/allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: testnamespace
spec:
  podSelector: {}
  ingress: 
    - {}
  policyTypes:
    - Ingress
