npm/testpolicies/testing/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: testnamespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
